# trainingData

./: .gitignore  AnalysisCuts.cxx  AnalysisCuts.h  AnitaClusterer.cxx  AnitaClusterer.h  BaseList.cxx  BaseList.h  CMakeLists.txt  COMNAP.cxx  COMNAP.h  LinkDef.h  Makefile  clusteringBeta.cxx  drawPowerSpectra.C  examineCoherentlySummedWaveforms.cxx  generateAngularResolutionTree.cxx  getWaisHeadings.cxx  imagePeakHilbertPeak.cxx  initialDistributions.cxx  makeDataQualityTrees.cxx  makeDecimatedDataQualityTrees.cxx  makeIndexedHeaderTrees.cxx  makeMinBiasDataQualityTrees.cxx  makeSignalTree.cxx  makeSlimDecimatedDataQualityTrees.cxx  makeSlimMinBiasDataQualityTrees.cxx  makeSlimMonteCarloDataQualityTrees.cxx  makeThermalBackgroundTree.cxx  makeWaisDataQualityTrees.cxx  minBiasDistributions.cxx  plotDataQuality.C  plotDataQuality.cxx  plotDiscriminatingVariablesVsTime.C  plotEventRate.C  plotEventRate2.C  plotInitialDistributions.cxx  plotLocation.C  plotMinBiasDistributions.cxx  plotRayleighDistributions.C  plotReconstructedDecimated.cxx  (+16 more)
definingThermalCut/: CMakeLists.txt  Makefile  defineThermalCut.cxx  plotDefineThermalCut.C  plotDefineThermalCut.cxx
definingThermalCut/weights/: discriminationTraining_Fisher.class.C  discriminationTraining_Fisher.weights.xml
